--- a/app/styles/naton.css
+++ b/app/styles/naton.css
@@ -1,6 +1,6 @@
 
 /*公用*/
-
+.navbar-default .navbar-collapse{background-color: #fff;}
 .floatRight{float: right;}
 .floatLeft{float: left;}
 .wid{width: 390px;}
@@ -9,18 +9,26 @@
 .borderRight{border-right: 1px solid #C9CACA;}
 .borderBottom{border-bottom: 1px solid #C9CACA;}
 /*中上图片*/
-.imgbox_left{float: left;overflow: hidden;width: 60%;max-width: 60%;}
+.imgbox_left{float: left;overflow: hidden;width: 642px;max-width: 642px;}
 .pt1{float: left;background-size:cover;width: 100%;max-width: 100%;}
 .pt2{float: left; background-size:cover;width:60%;max-width:60%;height: 260px;}
 .pt3{float: left; background-size:cover;width:40%;max-width:40%;height: 260px;}
-.imgbox_right{float:left;overflow: hidden;width: 40%;max-width: 40%;}
+.imgbox_right{float:left;overflow: hidden;width: 428px;max-width: 428px;}
 .pt4{float:left; background-size:cover;width:100%;max-width:100%;height: 260px;}
 .pt5{float:left; background-size:cover;width:100%;max-width:100%;height: 390px;}
 /*文章资讯*/
+.container-index{
+  width: 1100px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.navbar-header{background-color:#fff;}
 .zx_content{padding: 1em;}
-.zx_left{ float: left;height: 40em;width: 33.3%}
-.zx_mid{height: 40em; width: 33.3%}
-.zx_right{height: 40em;width: 33.3%}
+.zx_left{ float: left;height: 37em;width: 356px;}
+.zx_mid{height: 37em; width: 356px;}
+.zx_right{height: 37em;width: 356px;}
 .left_top{margin: auto; height: 80px;padding-top: 15px}
 .left_top a{display: block;height:50px;margin:0 1em;background-color: #ad2d16;color: #ffffff;text-align: center;line-height: 50px;font-size: 20px;}
 .left_mid img{margin-top: 20px}
@@ -34,8 +42,8 @@
 .mtc_bt{height: 500px;}
 .mtc_top{background-color: #305469;height: 50px;}
 .mtc_top a{color: #ffffff;font-size: 20px;display: block;line-height:50px;}
-.mtc_left{width: 66.6%;height: 500px;}
-.mtc_right{ background-color:#444444;width: 33.4%;list-style: none;height: 100%;}
+.mtc_left{width: 713px;height: 500px;}
+.mtc_right{ background-color:#444444;width: 357px;list-style: none;height: 100%;}
 .mtc-img{width: 40%;float: left;padding-right: 1em;}
 .mtc-text{width: 60%;float: left;}
 .foot_l{width: 33.3%;}
@@ -57,11 +65,10 @@
 .left_buttom{padding:2em 1em 1em;border-top: 1px solid #C9CACA;margin-top: 1em;}
 .left_buttom a{display: block;padding:1em;background-color: #69564e;color: #ffffff;text-align:center;font-size: 20px;}
 /*学术会议*/
-.date_l{width: 33.3%;padding: 2em;height: 40em;}
+.date_l{width: 33.3%;padding: 2em;height: 37em;}
 .date_m{width: 33.3%;padding: 2em;}
 .date_r{width: 33.3%;padding: 2em;}
-.date_1{width: 100%;list-style: none;}
-.date_1 li{margin-bottom: 1em;}
+
 /*今友社区*/
 .community{overflow: hidden;}
 .comm{background-color: #3B3487;height: 50px;}
